# starshipraider

./: .gitmodules
boards/probes/active-host-test/: .gitignore  ERRATA.md  active-host-test.kicad_pcb  active-host-test.sch  mcu.sch  power.sch  project.bck  project.lib  usb_c.sch
doc/: active_probe_pd_interface.md
firmware/probes/active-host-test/: CMakeLists.txt  FUSB302.c  Makefile  README.md  arm-gcc-toolchain.cmake  board.cpp  board.h  channel.h  f103_openocd.cfg  fifo.hpp  fusb302.cpp  fusb302.h  main.cpp  pin.cpp  pin.h  platform.h  registers.h  registers.hpp  stm32f103x8.ld  stm32f1xx_hal_conf.h  tcpm_driver.cpp  usb_pd.cpp  usb_pd.h  usb_pd_driver.c  usb_pd_tcpm.h
